--- a/jose2007kj/src/main/res/layout/fragment_signup.xml
+++ b/jose2007kj/src/main/res/layout/fragment_signup.xml
@@ -206,6 +206,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
+            <Button
+                android:id="@+id/shortcut"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/shortcut"
+                android:layout_marginBottom="19dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="21dp"
+                android:background="?attr/colorPrimary"
+                />
+
 
 
 
